--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "./dist/app.js",
   "type": "module",
   "scripts": {
-    "start": "tsc && node dist/app.js",
-    "client": "cd client && npm start"
+    "server": "nodemon --exec ts-node-esm src/app.ts",
+    "client": "cd client && npm start",
+    "start": "server && client"
   },
   "author": "Arkadiy Telitsyn",
   "license": "ISC",
@@ -17,7 +18,9 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.3.4"
+    "mongoose": "^7.3.4",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
