--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "target": "ES2018",
-    "module": "esnext",
+    "target": "ES2022",
+    "module": "ES2022",
     "outDir": "dist",
     "rootDir": "src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "strict": true
+    "moduleResolution": "node"
   },
   "include": ["src"]
 }
