--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Arkadiy Telitsyn",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   },
