--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 JWT_SECRET=some_key
 EXPIRES_IN=1h
-USER=arkandos
-PASSWORD=JU9KeV2zPbEV13HA
+MONGO_URI=mongodb+srv://arkandos:JU9KeV2zPbEV13HA@cluster0.g8epamr.mongodb.net/?retryWrites=true&w=majority
 PORT=3001
